@@ -52,7 +52,7 @@ class PackagesModel(ListModel):
         items = []
 
         if self._metadata is None:
-            Logger.logException("w", "Failed to load packages for Toolbox")
+            Logger.logException("w", "Failed to load packages for Marketplace")
             self.setItems(items)
             return
 
