@@ -245,7 +245,7 @@ class Toolbox(QObject, Extension):
             self._dialog = self._createDialog("Toolbox.qml")
 
         if not self._dialog:
-            Logger.log("e", "Unexpected error trying to create the 'Toolbox' dialog.")
+            Logger.log("e", "Unexpected error trying to create the 'Marketplace' dialog.")
             return
 
         self._dialog.show()
@@ -254,7 +254,7 @@ class Toolbox(QObject, Extension):
         self.enabledChanged.emit()
 
     def _createDialog(self, qml_name: str) -> Optional[QObject]:
-        Logger.log("d", "Toolbox: Creating dialog [%s].", qml_name)
+        Logger.log("d", "Marketplace: Creating dialog [%s].", qml_name)
         plugin_path = PluginRegistry.getInstance().getPluginPath(self.getPluginId())
         if not plugin_path:
             return None
@@ -262,7 +262,7 @@ class Toolbox(QObject, Extension):
         
         dialog = self._application.createQmlComponent(path, {"toolbox": self})
         if not dialog:
-            raise Exception("Failed to create toolbox dialog")
+            raise Exception("Failed to create Marketplace dialog")
         return dialog
 
     def _convertPluginMetadata(self, plugin: Dict[str, Any]) -> Dict[str, Any]:
@@ -578,7 +578,7 @@ class Toolbox(QObject, Extension):
     # Make API Calls
     # --------------------------------------------------------------------------
     def _makeRequestByType(self, type: str) -> None:
-        Logger.log("i", "Toolbox: Requesting %s metadata from server.", type)
+        Logger.log("i", "Marketplace: Requesting %s metadata from server.", type)
         request = QNetworkRequest(self._request_urls[type])
         request.setRawHeader(*self._request_header)
         if self._network_manager:
@@ -586,7 +586,7 @@ class Toolbox(QObject, Extension):
 
     @pyqtSlot(str)
     def startDownload(self, url: str) -> None:
-        Logger.log("i", "Toolbox: Attempting to download & install package from %s.", url)
+        Logger.log("i", "Marketplace: Attempting to download & install package from %s.", url)
         url = QUrl(url)
         self._download_request = QNetworkRequest(url)
         if hasattr(QNetworkRequest, "FollowRedirectsAttribute"):
@@ -603,7 +603,7 @@ class Toolbox(QObject, Extension):
 
     @pyqtSlot()
     def cancelDownload(self) -> None:
-        Logger.log("i", "Toolbox: User cancelled the download of a package.")
+        Logger.log("i", "Marketplace: User cancelled the download of a package.")
         self.resetDownload()
 
     def resetDownload(self) -> None:
@@ -690,7 +690,7 @@ class Toolbox(QObject, Extension):
 
                             return
                         except json.decoder.JSONDecodeError:
-                            Logger.log("w", "Toolbox: Received invalid JSON for %s.", type)
+                            Logger.log("w", "Marketplace: Received invalid JSON for %s.", type)
                             break
                     else:
                         self.setViewPage("errored")
@@ -717,10 +717,10 @@ class Toolbox(QObject, Extension):
                 self._onDownloadComplete(file_path)
 
     def _onDownloadComplete(self, file_path: str) -> None:
-        Logger.log("i", "Toolbox: Download complete.")
+        Logger.log("i", "Marketplace: Download complete.")
         package_info = self._package_manager.getPackageInfo(file_path)
         if not package_info:
-            Logger.log("w", "Toolbox: Package file [%s] was not a valid CuraPackage.", file_path)
+            Logger.log("w", "Marketplace: Package file [%s] was not a valid CuraPackage.", file_path)
             return
 
         license_content = self._package_manager.getPackageLicense(file_path)
@@ -819,7 +819,7 @@ class Toolbox(QObject, Extension):
     @pyqtSlot(str, str, str)
     def filterModelByProp(self, model_type: str, filter_type: str, parameter: str) -> None:
         if not self._models[model_type]:
-            Logger.log("w", "Toolbox: Couldn't filter %s model because it doesn't exist.", model_type)
+            Logger.log("w", "Marketplace: Couldn't filter %s model because it doesn't exist.", model_type)
             return
         self._models[model_type].setFilter({filter_type: parameter})
         self.filterChanged.emit()
@@ -827,7 +827,7 @@ class Toolbox(QObject, Extension):
     @pyqtSlot(str, "QVariantMap")
     def setFilters(self, model_type: str, filter_dict: dict) -> None:
         if not self._models[model_type]:
-            Logger.log("w", "Toolbox: Couldn't filter %s model because it doesn't exist.", model_type)
+            Logger.log("w", "Marketplace: Couldn't filter %s model because it doesn't exist.", model_type)
             return
         self._models[model_type].setFilter(filter_dict)
         self.filterChanged.emit()
@@ -835,7 +835,7 @@ class Toolbox(QObject, Extension):
     @pyqtSlot(str)
     def removeFilters(self, model_type: str) -> None:
         if not self._models[model_type]:
-            Logger.log("w", "Toolbox: Couldn't remove filters on %s model because it doesn't exist.", model_type)
+            Logger.log("w", "Marketplace: Couldn't remove filters on %s model because it doesn't exist.", model_type)
             return
         self._models[model_type].setFilter({})
         self.filterChanged.emit()
