@@ -26,8 +26,11 @@ Fullscreen mode can be toggled using the View menu or with the keyboard shortcut
 *Configuration error message
 In previous versions, Ultimaker Cura would display an error dialog explaining when something happened to user configuration files, including the option to reset to factory defaults. This would not warn about losing the current printer and print profile settings, so this information has been added.
 
-*Materials in the Toolbox
-A new tab has been added to the Toolbox that includes downloadable material profiles, to quickly and easily prepare models for a range of third-party materials.
+*Rename Toolbox to Marketplace
+The entry points to the Toolbox are now renamed to Marketplace.
+
+*Materials in the Marketplace
+A new tab has been added to the Marketplace that includes downloadable material profiles, to quickly and easily prepare models for a range of third-party materials.
 
 *New third-party definitions
 New profiles added for Anycube 4MAx and Tizyx K25.
